# tend

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/: generate.py
docs/superpowers/plans/: 2026-07-18-tend-core.md
hooks/: stop_hook.sh
skill/: SKILL.md
src/tend/: cli.py  engine.py  feel.py  message.py  render.py  state.py  transcript.py
tests/: test_cli.py  test_engine.py  test_feel.py  test_message.py  test_render.py  test_skill.py  test_state.py  test_transcript.py
tests/fixtures/: transcript_fixture.jsonl
